--- a/Maestrodetalles/appsettings.json
+++ b/Maestrodetalles/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "Cnn": "server=EMERSON; database=ENAE20241103DB; integrated security=true;"
+    //"Cnn": "server=EMERSON; database=ENAE20241103DB; integrated security=true;",
+    "Cnn": "workstation id=ENAE20241103DB.mssql.somee.com;packet size=4096;user id=EmersonAguilar_SQLLogin_1;pwd=dhkgvg5n5w;data source=ENAE20241103DB.mssql.somee.com;persist security info=False;initial catalog=ENAE20241103DB;TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
 }
